--- a/index.html
+++ b/index.html
@@ -1,50 +1,295 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="FrontFund Management - Your personal investment knowledge club. Explore Foundation and Economy memberships and grow your financial future."
-    />
+    <meta name="description"
+        content="FrontFund Management - Your personal investment knowledge club. Explore Foundation and Economy memberships and grow your financial future." />
     <title>FrontFund Management | Investment Club</title>
 
     <!-- Bootstrap 5.3 CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
     <!-- Google Fonts: Outfit -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet" />
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!-- Main application content will be populated in Phase 2 -->
-    <main id="app">
-      <div class="container py-5 text-center text-white">
-        <h1>FrontFund Management</h1>
-        <p class="lead">Project skeleton initialised with Bootstrap 5.</p>
-      </div>
+</head>
+
+<body>
+    <!-- =====================================================
+         HEADER / NAV
+         ===================================================== -->
+    <header class="site-header">
+        <div class="container">
+            <div class="site-header__inner d-flex align-items-center justify-content-between">
+                <span class="site-header__brand">FrontFund</span>
+                <nav aria-label="Main navigation">
+                    <button class="btn site-header__menu-btn" id="menuToggleBtn" aria-label="Open navigation menu"
+                        aria-expanded="false" aria-controls="mobileMenu">
+                        <i class="bi bi-list" aria-hidden="true"></i>
+                    </button>
+                </nav>
+            </div>
+
+            <!-- Mobile dropdown menu -->
+            <div class="site-header__mobile-menu" id="mobileMenu" hidden>
+                <ul class="site-header__menu-list list-unstyled mb-0">
+                    <li><a href="#memberships" class="site-header__menu-link">Memberships</a></li>
+                    <li><a href="#joinModal" data-bs-toggle="modal" data-bs-target="#joinModal"
+                            class="site-header__menu-link">Join Now</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <!-- =====================================================
+         MAIN CONTENT
+         ===================================================== -->
+    <main id="main-content">
+        <div class="container">
+
+            <!-- ─────────────────────────────────────────────────
+             SECTION 1: HERO / PROFILE CARD
+             ───────────────────────────────────────────────── -->
+            <section class="hero-card" aria-label="User profile welcome">
+                <div class="hero-card__badge-strip">
+                    <i class="bi bi-star-fill hero-card__star" aria-hidden="true"></i>
+                </div>
+
+                <div class="hero-card__body">
+                    <div class="hero-card__avatar-wrapper" aria-hidden="true">
+                        <div class="hero-card__avatar">
+                            <i class="bi bi-person-fill hero-card__avatar-icon"></i>
+                        </div>
+                    </div>
+
+                    <h1 class="hero-card__name">Michael</h1>
+                    <p class="hero-card__subtitle">
+                        You've officially joined<br />
+                        your first investment<br />
+                        knowledge club!
+                    </p>
+                </div>
+            </section>
+
+            <!-- ─────────────────────────────────────────────────
+             SECTION 2: LEADERBOARD / STATS GRID
+             ───────────────────────────────────────────────── -->
+            <section class="leaderboard" aria-label="Member leaderboard stats">
+                <div class="row g-3">
+
+                    <!-- Stat Card 1: Benard Makodingo -->
+                    <div class="col-6">
+                        <article class="stat-card">
+                            <div class="stat-card__avatar-wrap">
+                                <div class="stat-card__avatar stat-card__avatar--blue">
+                                    <i class="bi bi-person-fill" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="stat-card__info">
+                                <p class="stat-card__name">Benard<br />Makodingo</p>
+                                <p class="stat-card__score" aria-label="Score: 350">350</p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <!-- Stat Card 2: KigSmall Foot -->
+                    <div class="col-6">
+                        <article class="stat-card">
+                            <div class="stat-card__avatar-wrap">
+                                <div class="stat-card__avatar stat-card__avatar--green">
+                                    <i class="bi bi-person-fill" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="stat-card__info">
+                                <p class="stat-card__name">KigSmall<br />Foot</p>
+                                <p class="stat-card__score" aria-label="Score: 225">225</p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <!-- Stat Card 3: Caroline Likhoi -->
+                    <div class="col-6">
+                        <article class="stat-card">
+                            <div class="stat-card__avatar-wrap">
+                                <div class="stat-card__avatar stat-card__avatar--purple">
+                                    <i class="bi bi-person-fill" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="stat-card__info">
+                                <p class="stat-card__name">Caroline<br />Likhoi</p>
+                                <p class="stat-card__score" aria-label="Score: 117">117</p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <!-- Stat Card 4: Caroline Likhoi (second entry) -->
+                    <div class="col-6">
+                        <article class="stat-card">
+                            <div class="stat-card__avatar-wrap">
+                                <div class="stat-card__avatar stat-card__avatar--orange">
+                                    <i class="bi bi-person-fill" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="stat-card__info">
+                                <p class="stat-card__name">Caroline<br />Likhoi</p>
+                                <p class="stat-card__score" aria-label="Score: 321">321</p>
+                            </div>
+                        </article>
+                    </div>
+
+                </div>
+            </section>
+
+            <!-- ─────────────────────────────────────────────────
+             SECTION 3: MOTIVATION BANNER
+             ───────────────────────────────────────────────── -->
+            <section class="motivation-banner" aria-label="Membership recommendation">
+                <div class="motivation-banner__header">
+                    <h2 class="motivation-banner__title">Now let's make you great!</h2>
+                    <p class="motivation-banner__highlight">
+                        You have shown us where you are doing well and where we can support you to be great!
+                    </p>
+                </div>
+                <div class="motivation-banner__body">
+                    <p class="motivation-banner__text">
+                        From your profile we recommend these memberships. Pick on that fits you best and start
+                        your financial adventure
+                    </p>
+                </div>
+            </section>
+
+            <!-- ─────────────────────────────────────────────────
+             SECTION 4: MEMBERSHIP CARDS
+             ───────────────────────────────────────────────── -->
+            <section class="memberships" id="memberships" aria-label="Available memberships">
+
+                <!-- Foundation Membership -->
+                <article class="membership-card membership-card--foundation" id="foundation-card">
+                    <button class="membership-card__header" id="foundationToggleBtn" aria-expanded="false"
+                        aria-controls="foundation-description" aria-label="Toggle Foundation Membership description">
+                        <span class="membership-card__label">FOUNDATION MEMBERSHIP</span>
+                        <i class="bi bi-chevron-down membership-card__chevron" aria-hidden="true"></i>
+                    </button>
+
+                    <div class="membership-card__description" id="foundation-description" role="region"
+                        aria-labelledby="foundationToggleBtn">
+                        <div class="membership-card__description-inner">
+                            <p>
+                                We invest for you, in shares and in the Mansa-X global fund. Service is free
+                                online with your personal representative, but service in the office may have extra
+                                charges.
+                            </p>
+                            <button class="membership-card__cta-btn" data-bs-toggle="modal" data-bs-target="#joinModal"
+                                data-membership="Foundation" aria-label="Join Foundation Membership">
+                                Join Foundation
+                            </button>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Economy Membership -->
+                <article class="membership-card membership-card--economy" id="economy-card">
+                    <button class="membership-card__header" id="economyToggleBtn" aria-expanded="false"
+                        aria-controls="economy-description" aria-label="Toggle Economy Membership description">
+                        <span class="membership-card__label">ECONOMY MEMBERSHIP</span>
+                        <i class="bi bi-chevron-down membership-card__chevron" aria-hidden="true"></i>
+                    </button>
+
+                    <div class="membership-card__description" id="economy-description" role="region"
+                        aria-labelledby="economyToggleBtn">
+                        <div class="membership-card__description-inner">
+                            <p>
+                                We will invest your money for you at a guaranteed rate with the Mansa-X global
+                                fund. Service is free online with your personal representative, but service in the
+                                office may have extra charges.
+                            </p>
+                            <button class="membership-card__cta-btn" data-bs-toggle="modal" data-bs-target="#joinModal"
+                                data-membership="Economy" aria-label="Join Economy Membership">
+                                Join Economy
+                            </button>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Details link -->
+                <div class="memberships__details-link-wrap text-center mt-3">
+                    <a href="#" class="memberships__details-link" id="detailsLink">
+                        A closer look at the memberships details is available here
+                    </a>
+                </div>
+
+            </section>
+
+        </div><!-- /.container -->
     </main>
 
-    <!-- Bootstrap 5.3 JS Bundle (includes Popper) -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc4s9bIOgUxi8T/jzmS28ckGqtqPGQ4LVWv2EGOsRMLE"
-      crossorigin="anonymous"
-    ></script>
+    <!-- =====================================================
+         FOOTER
+         ===================================================== -->
+    <footer class="site-footer" role="contentinfo">
+        <div class="container">
+            <p class="site-footer__text">
+                FrontFund Management &copy; 2025. All Rights Reserved.
+            </p>
+        </div>
+    </footer>
+
+    <!-- =====================================================
+         JOIN MODAL (populated in Phase 3)
+         ===================================================== -->
+    <div class="modal fade" id="joinModal" tabindex="-1" aria-labelledby="joinModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content join-modal">
+                <div class="modal-header join-modal__header">
+                    <h2 class="modal-title join-modal__title" id="joinModalLabel">Join the Club</h2>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body join-modal__body">
+                    <p class="join-modal__subtitle" id="joinModalSubtitle">
+                        Start your financial adventure today.
+                    </p>
+                    <form id="joinForm" novalidate>
+                        <div class="mb-3">
+                            <label for="joinName" class="form-label join-modal__label">Full Name</label>
+                            <input type="text" class="form-control join-modal__input" id="joinName"
+                                placeholder="e.g. Michael Omondi" autocomplete="name" required />
+                            <div class="join-modal__error" id="nameError" role="alert" aria-live="polite"></div>
+                        </div>
+                        <div class="mb-4">
+                            <label for="joinEmail" class="form-label join-modal__label">Email Address</label>
+                            <input type="email" class="form-control join-modal__input" id="joinEmail"
+                                placeholder="e.g. michael@example.com" autocomplete="email" required />
+                            <div class="join-modal__error" id="emailError" role="alert" aria-live="polite"></div>
+                        </div>
+                        <div class="join-modal__feedback" id="formFeedback" role="status" aria-live="polite"></div>
+                        <button type="submit" class="btn join-modal__submit-btn w-100" id="joinSubmitBtn">
+                            Join Now
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap 5.3 JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc4s9bIOgUxi8T/jzmS28ckGqtqPGQ4LVWv2EGOsRMLE"
+        crossorigin="anonymous"></script>
 
     <!-- Custom Scripts -->
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
